--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -17,11 +17,17 @@
   display: flex;
   justify-content: space-between;
   font-family: "Bungee", sans-serif;
-  margin-top: 1%;
+  margin-top: 0.5em;
 }
 
 .under-tweet .tweet-btn {
   background: #4056A1;
   color: #FFFFFF;
   border: none;
+}
+
+.error-message {
+  display: none;
+  color: red;
+  font-weight: 600;
 }
