--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -13,3 +13,15 @@ header .profile-img{
   
   margin-top: 132px;
 }
+
+.bold {
+  font-weight: 600;
+}
+
+@media only screen and (min-width: 1024px) {
+  .top-header {
+    height: 20em;
+    width: 20em;
+    margin: 1.5em 1em 0 0;
+  }
+}
