--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -13,21 +13,30 @@
   color: #545149;
 }
 
-.under-tweet{
+.under-input{
   display: flex;
   justify-content: space-between;
   font-family: "Bungee", sans-serif;
   margin-top: 0.5em;
 }
 
-.under-tweet .tweet-btn {
+.under-input .tweet-btn {
   background: #4056A1;
   color: #FFFFFF;
   border: none;
+}
+
+.tweet-btn:hover {
+  cursor: pointer;
+  border: 4px solid #8d9dd2;
 }
 
 .error-message {
   display: none;
   color: red;
   font-weight: 600;
+  margin-top: 1em;
+  border: 3px solid red;
+  text-align: left;
+  padding: 1em;
 }
